css/form-style.css
/* Including css for the headers */



#pd-heading{
  color: #fff;
  letter-spacing: 2px;
  font-weight: 600;
  text-transform: uppercase;
}

/* --------------------------------------------- */

#reg-form{
  background-color: whitesmoke;
  padding: 20px 40px;
  box-sizing: border-box;
}

fieldset{
  margin: 30px 10px;
}

#form-heading{
  text-align: center;
}


div.input-field{
  margin: 10px 0px;
}

.select2 .select2-selection {
  border-radius: 2px;
}

.registrationform button, .registrationform input, select, textarea{
  font-family: inherit;
  font-size: 95%;
  padding: 5px;
  margin: 0.5%;
  outline: none;
  box-sizing: border-box;
  width: 25%;
}

input[type='radio']{      /*increase the size of radio buttons*/
  height: 19px;
  width: 19px;
  margin: 5px;
}

/* -------------------Flex box styling-------------------- */

.input-field{
  display: flex;
}

.label-box{
  flex: 3.5 0 0;
  text-align: right;
  padding: 5px 10px;
  font-size: 22px;
  line-height: 1.6em;
}

.input-box{
  flex: 7 0 0;
  padding: 5px 10px;
}

.input-box input{
  padding: 5px;
  font-size: 20px;
  margin: 5px;
}

.input-box .single{
  width: 70%;
}

.input-box .double{
  width: 37%;
}

/* --------------------------Adjusting address input fields------------------------*/

#addr1, #addr2{
  width: 90%;
}

/* -----------------------------------Adjusting HLA labels linke A, B, C---------------- */

.antigen{
  margin: 15px;
}

.antigen label:not(.help-block):not(.required) {
  display: inline-block;
  width: 8%;
}

/* ---------------------------------------Custom error class----------------------------- */

.has-error{
  border: 1px solid #c51244;
  background-color: #fff0f4; 
}

.select2.has-error .select2-selection {
  background: transparent;
  border: none;
}

.help-block{
  color: #c51244;
  font-size: 18px;
  display: inline-block;
  width: 60%;
}

label.required{
  content:"*";
  color: red;
}


/* ------------passport image and form heading----------------- */

.heading-box{
  flex: 7 0 0;
}

.heading-box h3{
  font-size: 28px;
  text-transform: capitalize;
  margin-left: 50%;
  margin-top: 10%;
}

.pass-img-box{
  flex: 3 0 0;
}

#r-pass-img{
  width: 50%;
  display: block;
}

#d-pass-img{
  width: 50%;
  display: block;
}

.pass-img-box input{   /*Try using width of this as 0 and using jquery validation*/
  width: 90%;
  margin: 5px;
  padding: 5px;
}

.pass-img-box label{
  width: 90%;
  display: block;
  text-align: right;
  margin: 5px;
}
/* ------------------------------------------- */

#next-btn, #prev-btn{
  background-color:  darkgrey;
  color: black;
  padding: 14px 20px;
  margin: 8px 0;
  border: none;
  cursor: pointer;
  width: 30%;
}

#next-btn:hover, #prev-btn:hover{
  opacity: 0.8;
}

#btn-block{
  text-align: center;
  width: 65%;
  margin-left: 45%;
}

/* On screens that are 992px or less, set the background color to blue */
@media screen and (max-width: 992px) {
 
  .heading-box h3
  {
    font-size:25px;
    margin-left:0;
  }
  .input-field
  {
    display:flex;
    flex-direction: column;
  }
  #r-pass-img
  {
    margin: auto !important;
  }
  .label-box
  {
    text-align:left;
  }
  #btn-block{
    text-align: center;
    width: 65%;
    margin-left: 0%;
  }
}

